force-app/main/default/objects/VOR__c/VOR__c.object-meta.xml
<CustomObject>
    <label>VOR</label>
    <nameField>
        <displayFormat>VOR -{00000}</displayFormat>
        <label>VOR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>