force-app/main/default/objects/VOR__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <formula>ROUND(VALUE(TEXT(ROUND((NOW() - CreatedDate) * 24, 2) / 24)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOR Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>