force-app/main/default/objects/VOR__c/fields/Awaiting_Parts_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Parts_in_Days__c</fullName>
    <label>Awaiting Parts in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>