force-app/main/default/objects/VOR__c/fields/Customer_Approval_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_in_Days__c</fullName>
    <label>Customer Approval in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>