force-app/main/default/objects/VOR__c/fields/Insurance_Email_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Email_Vendor__c</fullName>
    <label>Insurance Email Vendor</label>
    <type>Email</type>
</CustomField>