force-app/main/default/objects/VOR__c/fields/Insurance_Stage_1_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Stage_1_in_Days__c</fullName>
    <label>Insurance Stage 1 in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>