force-app/main/default/objects/VOR__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <formula>TEXT( Job_Card__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>