force-app/main/default/objects/VOR__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <formula>TEXT(Job_Card__r.RR_Job_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>