force-app/main/default/objects/VOR__c/fields/Last_Updated_VOR_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_VOR_Reason__c</fullName>
    <label>Last Updated VOR Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>