force-app/main/default/objects/VOR__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>ProductRequest</referenceTo>
    <relationshipName>VOR_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>