force-app/main/default/objects/VOR__c/fields/Ready_for_Delivery_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Delivery_in_Days__c</fullName>
    <label>Ready for Delivery in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>