force-app/main/default/objects/VOR__c/fields/Reason_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Reason_Entered_Date__c</fullName>
    <label>Last Update Time</label>
    <type>DateTime</type>
</CustomField>