force-app/main/default/objects/VOR__c/fields/Rework_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Rework_in_Days__c</fullName>
    <label>Rework in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>