force-app/main/default/objects/VOR__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VOR</relationshipLabel>
    <relationshipName>VOR</relationshipName>
    <type>Lookup</type>
</CustomField>