force-app/main/default/objects/VOR__c/fields/VOR_Creation_hours__c.field-meta.xml
<CustomField>
    <fullName>VOR_Creation_hours__c</fullName>
    <formula>NOW() - CreatedDate &lt;= (1/1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOR Creation hours</label>
    <type>Checkbox</type>
</CustomField>