force-app/main/default/objects/VOR__c/fields/VOR_Reason__c.field-meta.xml
<CustomField>
    <fullName>VOR_Reason__c</fullName>
    <label>VOR Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Diagnosis</fullName>
            </value>
            <value>
                <fullName>Awaiting Parts</fullName>
            </value>
            <value>
                <fullName>Insurance Stage 1</fullName>
            </value>
            <value>
                <fullName>Insurance Stage 2</fullName>
            </value>
            <value>
                <fullName>Awaiting Allotment</fullName>
            </value>
            <value>
                <fullName>Customer Approval</fullName>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>