force-app/main/default/objects/VOR__c/fields/VOR_Reason_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>VOR_Reason_Duration_Time__c</fullName>
    <label>VOR Reason Duration Time 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>