force-app/main/default/objects/VOR__c/fields/VOR_Reason_Duration_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>VOR_Reason_Duration_Time_Minutes__c</fullName>
    <formula>TEXT(FLOOR(VOR_Reason_Duration_Time__c / 24)) &amp; &quot; Days &quot; &amp;
TEXT(ROUND(MOD(VOR_Reason_Duration_Time__c, 24), 0)) &amp; &quot; Hours&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOR Reason Duration Time</label>
    <type>Text</type>
</CustomField>