force-app/main/default/objects/VOR__c/validationRules/Purchase_Order_Should_be_Mendatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Order_Should_be_Mendatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(VOR_Reason__c, &apos;Awaiting Parts&apos;),
    ISBLANK(Purchase_Order__c)
)</errorConditionFormula>
    <errorMessage>Purchase Order is required when VOR Reason is &apos;Awaiting Parts&apos; .</errorMessage>
</ValidationRule>