force-app/main/default/objects/VOR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Card__c</columns>
    <columns>Last_Updated_VOR_Reason__c</columns>
    <columns>Remark__c</columns>
    <columns>VOR_Reason__c</columns>
    <columns>Ageing__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All VOR DMS</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <portalRoleAndSubordinates>AUserPartnerPersonAccount</portalRoleAndSubordinates>
    </sharedTo>
</ListView>