force-app/main/default/objects/VOR__c/listViews/My_VOR_s.listView-meta.xml
<ListView>
    <fullName>My_VOR_s</fullName>
    <columns>NAME</columns>
    <columns>Job_Card__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Insurance_Email_Vendor__c</columns>
    <columns>Ageing__c</columns>
    <columns>VOR_Reason__c</columns>
    <columns>VOR_Reason_Duration_Time_Minutes__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My VOR&apos;s</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>